--- v0.3 development series ---

- New keyboard shortcut: hold "shift" while clicking the "open thread in new
tab" button (either in the main toolbar, the message header toolbar or the
conversation toolbar) to display the conversation full-screen (without the
message list).
- Deleting a conversation using the conversation toolbar now also deletes
messages that aren't in the current folder.
- Revamp printing. Messages now flow properly accross pages (warning: no HTML
message printing).
- New keyboard shortcut: h to hide a given message (before printing a whole
conversation, for instance).
- More visual improvements.
- Added a keyboard navigation mode. Use tab to jump from the message list to the
individual messages in the conversation. Use the O key to open/close a given
message. Use tab/shift-tab to move to next/previous message in the conversation.
Use backspace to move back to the conversation view.
- Added an "icons-only" mode for the buttons in the conversation view. This
should make it easier for narrow screens to properly display the conversation
title. Added native icons on Linux, Mac and Windows.
- Added a "back" button to easily switch back to the single message view that
was displayed before the conversation.
- Dropped large parts of the code, in order to simplify maintenance. plain/text
messages are now displayed using the standard Thunderbird display code. This
means they will use the default font, they will have standard <blockquote>s
around quotations instead of >s.
- Dropped support for "use HTML for viewing messages whenever possible". The
extension now follows the Thunderbird global policy: select View > Message Body
As > [whatever you want] to achieve the same effect.

GMail Conversation View 0.3beta2
--------------------------------

- Various bugfixes from Justin Hileman: Makefile fixes, monospaced text
wrapping...
- Visual refresh of the conversation view, many thanks to Justin Hileman.