@@ -87,6 +87,8 @@
             }
 
             Components.utils.import("resource://app/modules/errUtils.js");
+            Components.utils.import("resource://gconversation/VariousUtils.jsm");
+
             const Ci = Components.interfaces;
             const Cc = Components.classes;
             const stringBundle = window.top.document.getElementById("gconv-string-bundle");
@@ -132,7 +134,7 @@
             }
 
             function customizeToolbar() {
-              for each (let l in ["archive", "trash", "fold_all", "unfold_all", "mark_as_read", "print", "back"])
+              for each (let l in ["archive", "trash", "collapse_all", "expand_all", "mark_as_read", "print", "back"])
                 if (!buttonBranch.getBoolPref(l))
                   document.getElementById(l).style.display = "none";
               if (prefsBranch.getBoolPref("toolbar_icons_only")) {
@@ -161,35 +163,6 @@
                 div.style.display = "none";
                 return -h;
               }
-            }
-
-            /* function toggleMessage(event) {
-              let arrow = event.target;
-              if (arrow.getAttribute("src") == "chrome://gconversation/skin/up.png")
-                arrow.setAttribute("src", "chrome://gconversation/skin/down.png");
-              else
-                arrow.setAttribute("src", "chrome://gconversation/skin/up.png");
-              let snippets = event.target.parentNode.parentNode.parentNode.getElementsByClassName("snippet");
-              for each (let [, snippet] in Iterator(snippets)) {
-                if (snippet.style.display == "none")
-                  snippet.style.display = "";
-                else
-                  snippet.style.display = "none";
-              }
-            } */
-
-            function unfoldAll(event) {
-              let e = document.createEvent("UIEvents");
-              e.initUIEvent("click", true, true, window, 1);
-              for each (let [, x] in Iterator(document.querySelectorAll(".msgarrow[src='chrome://gconversation/skin/down.png']")))
-                x.dispatchEvent(e);
-            }
-
-            function foldAll(event) {
-              let e = document.createEvent("UIEvents");
-              e.initUIEvent("click", true, true, window, 1);
-              for each (let [, x] in Iterator(document.querySelectorAll(".msgarrow[src='chrome://gconversation/skin/up.png']")))
-                x.dispatchEvent(e);
             }
 
             function disableExtraButtons() {
@@ -240,16 +213,16 @@
                             label="&button.mark_all_read;"
                             tooltiptext="&button.mark_all_read;"
                             onclick="if (event.button == 0) window.top.gconversation.mark_all_read()"/>
-                    <button id="unfold_all"
+                    <button id="expand_all"
                             class="button msgHeaderView-button extra-button"
-                            onclick="if (event.button == 0) unfoldAll();"
-                            label="&button.unfold_all;"
-                            tooltiptext="&button.unfold_all;" />
-                    <button id="fold_all"
+                            onclick="if (event.button == 0) window.top.gconversation.on_expand_all()"
+                            label="&button.expand_all;"
+                            tooltiptext="&button.expand_all;" />
+                    <button id="collapse_all"
                             class="button msgHeaderView-button extra-button"
-                            onclick="if (event.button == 0) foldAll();"
-                            label="&button.fold_all;"
-                            tooltiptext="&button.fold_all;" />
+                            onclick="if (event.button == 0) window.top.gconversation.on_collapse_all()"
+                            label="&button.collapse_all;"
+                            tooltiptext="&button.collapse_all;" />
                     <button id="print"
                             class="button msgHeaderView-button extra-button"
                             label="&button.print;"
