@@ -58,8 +58,8 @@
       <preference id="button.trash" name="gconversation.button.trash" type="bool" />
       <preference id="button.print" name="gconversation.button.print" type="bool" />
       <preference id="button.back" name="gconversation.button.back" type="bool" />
-      <preference id="button.fold_all" name="gconversation.button.fold_all" type="bool" />
-      <preference id="button.unfold_all" name="gconversation.button.unfold_all" type="bool" />
+      <preference id="button.collapse_all" name="gconversation.button.collapse_all" type="bool" />
+      <preference id="button.expand_all" name="gconversation.button.expand_all" type="bool" />
       <preference id="button.mark_as_read" name="gconversation.button.mark_as_read" type="bool" />
       <preference id="button.open_in_new_tab" name="gconversation.button.open_in_new_tab" type="bool" />
       <preference id="focus_first" name="gconversation.focus_first" type="bool" />
@@ -89,10 +89,10 @@
           <checkbox label="&option.button.archive;" preference="button.archive" id="archive_checkbox" />
           <checkbox label="&option.button.trash;" preference="button.trash" id="delete_checkbox" />
           <checkbox label="&option.button.print;" preference="button.print" id="print_checkbox" />
-          <checkbox label="&option.button.unfold_all;" preference="button.unfold_all" id="unfold_all_checkbox" />
+          <checkbox label="&option.button.expand_all;" preference="button.expand_all" id="expand_all_checkbox" />
         </vbox>
         <vbox flex="1">
-          <checkbox label="&option.button.fold_all;" preference="button.fold_all" id="fold_all_checkbox" />
+          <checkbox label="&option.button.collapse_all;" preference="button.collapse_all" id="collapse_all_checkbox" />
           <checkbox label="&option.button.mark_as_read;" preference="button.mark_as_read" id="mark_as_read_checkbox" />
           <checkbox label="&option.button.open_in_new_tab;" preference="button.open_in_new_tab" id="open_in_new_tab_checkbox" />
           <checkbox label="&option.button.back;" preference="button.back" id="back_checkbox" />
