@@ -6,8 +6,8 @@ pref("gconversation.button.archive", true);
 pref("gconversation.button.trash", true);
 pref("gconversation.button.print", false);
 pref("gconversation.button.back", true);
-pref("gconversation.button.unfold_all", true);
-pref("gconversation.button.fold_all", true);
+pref("gconversation.button.expand_all", true);
+pref("gconversation.button.collapse_all", true);
 pref("gconversation.button.mark_as_read", true);
 pref("gconversation.button.open_in_new_tab", true);
 pref("gconversation.focus_first", false);
