@@ -14,8 +14,8 @@
 <!ENTITY option.button.trash "Display &quot;delete&quot; button">
 <!ENTITY option.button.print "Display &quot;print&quot; button">
 <!ENTITY option.button.back "Display &quot;back&quot; button">
-<!ENTITY option.button.unfold_all "Display &quot;unfold all&quot; button">
-<!ENTITY option.button.fold_all "Display &quot;fold all&quot; button">
+<!ENTITY option.button.expand_all "Display &quot;expand all&quot; button">
+<!ENTITY option.button.collapse_all "Display &quot;collapse all&quot; button">
 <!ENTITY option.button.mark_as_read "Display &quot;mark all read&quot; button">
 <!ENTITY option.button.open_in_new_tab "Display &quot;open in new tab&quot; button">
 <!ENTITY title.quoting "Quoting and folding">
